# d2hackmap-editor

./: .gitignore  build_win11.bat  cfg_editor.html  debug_win11.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
data/: items.json  paletteColors.json  runes.json  stats.json  textColors.json
src/: App.vue  configDefs.ts  generator.ts  keywords.ts  main.ts  parser.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ColorPreview.vue  ConfigChainDialog.vue  ConfigHeader.vue  ConfigList.vue  ConfigRow.vue  ConfigTable.vue  DescriptorListPicker.vue  EditorPanel.vue  HelpGuide.vue  HotkeyInput.vue  ImportItemEditor.vue  ItemColorEditor.vue  ItemPicker.vue  KeyBindingEditor.vue  MapColorPicker.vue  NamePicker.vue  QualityPicker.vue  RunePicker.vue  SearchSelect.vue  StatGroupPicker.vue  StatLimitEditor.vue  StatPicker.vue  SubTabs.vue  TextColorPicker.vue  ToggleEditor.vue  TransmuteEditor.vue  ValidationEditor.vue  configTable.ts
src/components/debug/: DebugDrawer.vue  FlatListView.vue  GroupedListView.vue
src/composables/: useConfig.ts  useConfigChain.ts  useConfigList.ts  useDebugMode.ts  useEditorOutput.ts  useFileStorage.ts  useGroupedItems.ts  useItemActions.ts  useReferenceData.ts  useTheme.ts  useTransmuteItems.ts  useValidation.ts
src/i18n/: index.ts  zh-CN.ts
src/services/: tauriApi.ts
src/types/: config.ts  index.ts
src/utils/: IdRange.ts  columnWidth.ts  grouping.ts  keymap.ts  log.ts  rangeParser.ts
