[package]
name = "d2hackmap-cfg-editor"
version = "1.0.0"
description = "D2HackMap CFG Editor"
authors = ["D2HackMap CFG Editor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
